[package]
name = "gb23"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
debug = true
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sdl2 = { version = "0.36", features = ["bundled", "static-link"] }
rustyline = { version = "13", features = ["derive"] }
signal-hook = "0.3"

